K8S/MSSQLServer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: MicrosoftSqlServer-Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MicrosoftSqlServer
  template:
    metadata:
      labels:
        app: MicrosoftSqlServer
    spec:
      containers:
        - name: MicrosoftSqlServer
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqlvol
    volumes:
      - name: mssqlvol
        persistentVolumeClaim: 
          claimName: MicrosoftSqlServer-PersistentVolumeClaim
---
apiVersion: v1
kind: Service
metadata:
  name: MicrosoftSqlServer-ClusterIp
spec:
  type: ClusterIP
  selector:
    app: MicrosoftSqlServer
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: MicrosoftSqlServer-LoadBalancer
spec:
  type: LoadBalancer
  selector:
    app: MicrosoftSqlServer
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
