K8S/PlatformService-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: PlatformService-Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: PlatformService
  template:
    metadata:
      labels:
        app: PlatformService
    spec:
      containers:
        - name: PlatformService
          image: GSGPavan/PlatformService:latest
---
apiVersion: apps/v1
kind: Service
metaData:
  name: PlatformService-ClusterIp
spec:
  type: ClusterIp
  selector:
    app: PlatformService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
