K8S/PlatformService-np.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: PlatformService-NodePort
spec:
  type: NodePort
  selector:
    app: PlatformService
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort : 34307
